Inicio de criação da pagina de cadastro de tarefa, criando controller, e testando conexão(Ainda sem acesso ao banco de dados).

--- a/assets/css/login-page.css
+++ b/assets/css/login-page.css
@@ -43,4 +43,9 @@ body{
 .register{
     margin: 15px 0;
 }
+.btn-close{
+    color: black;
+    border: 1px solid lightgray;
+    padding: 5px;
+}
 /*-----------------*/
