--- a/assets/css/login-page.css
+++ b/assets/css/login-page.css
@@ -5,7 +5,7 @@ body{
     font-family: Roboto;
 }
 .wrapper{
-    background: rgb(226, 224, 224);
+    background: rgb(27, 26, 26);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +25,7 @@ body{
     width: 500px;
     height: auto;
     padding: 25px;
-    box-shadow: 3px 5px 5px;
+    box-shadow: 5px 5px 5px rgb(128, 122, 122);
 }
 .input{
     margin: 25px;
@@ -36,6 +36,7 @@ body{
     margin-top: 3px;
     justify-content: center;
     align-items: center;
+    box-shadow: 3px lightgray;
 }
 .button-display button{
     margin: 5px;
@@ -47,5 +48,9 @@ body{
     color: black;
     border: 1px solid lightgray;
     padding: 5px;
+}
+input:hover{
+    border: 1px rgb(47, 47, 235) solid;
+
 }
 /*-----------------*/
