--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,10 +92,15 @@ footer{
     border-radius: 15px;
     padding: 25px;
     box-shadow:  3px 5px 5px lightgray;
+    text-align: center;
 }
 .table{
     border: 1px solid lightgrey;
     border-radius: 15px;
-    padding: 25px;
+    padding: 15px;
+    text-align: center;
     /* box-shadow:  3px 5px 5px lightgray; */
+}
+.action{
+    margin: 5px;
 }
