--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -2,7 +2,7 @@
 
 :root{--header-height: 3rem;--nav-width: 68px;--first-color: #2335d9;--first-color-light: #AFA5D9;--white-color: #F7F6FB;--body-font: 'Nunito', sans-serif;--normal-font-size: 1rem;--z-fixed: 100}
 *,::before,::after{box-sizing: border-box}
-body{position: relative;margin: var(--header-height) 0 0 0;padding: 0 1rem;font-family: var(--body-font);font-size: var(--normal-font-size);transition: .5s}
+body{position: relative;margin: var(--header-height) 0 0 0;padding: 0 1rem;font-size: var(--normal-font-size);transition: .5s}
 .header{width: 100%;height: var(--header-height);position: fixed;top: 0;left: 0;display: flex;align-items: center;justify-content: space-between;padding: 0 1rem;background-color: var(--white-color);z-index: var(--z-fixed);transition: .5s}
 .header_toggle{color: var(--first-color);font-size: 1.5rem;cursor: pointer}
 .header_img{width: 35px;height: 35px;display: flex;justify-content: center;border-radius: 50%;overflow: hidden}
