Ultimas alterações realizadas, conclusão da pagina de edição realizada, ultimas melhorias de layout realizada. Paginas e funções em pleno funcionamento (Projeto Concluido).

--- a/assets/css/login-page.css
+++ b/assets/css/login-page.css
@@ -5,7 +5,7 @@ body{
     font-family: Roboto;
 }
 .wrapper{
-    background: rgb(228, 222, 222);
+    background: #2f41e7;
     display: flex;
     justify-content: center;
     align-items: center;
