--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,5 +152,17 @@ footer{
     display: inline-block;
     width: 100px;
 }
-
+.arrow{
+    display: flex;
+    float: left;
+    width: 50px;
+    height: 35px;
+    
+}
+.arrow a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
 
